--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,24 @@
 		<ExtentReportversion>5.1.0</ExtentReportversion>
 	</properties>
 
+<build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.2.5</version>
+          <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+
 	<dependencies>
 
 
