--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+	<maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<seleniumVersion>4.11.0</seleniumVersion>
 		<testNGVersion>7.7.1</testNGVersion>
